--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 h1 {
 	font-family: Ubuntu;
   font-size: 2.5em;
-  margin: 0.67em 0;
+  margin: 20px 0;
 }
 
 header {
@@ -42,24 +42,23 @@ text {
 
 
 .sleva {
-	padding-top: 50px;
-	position: fixed;
 	float: left;
-	width: 20%;
+	width: 200px;
 	margin-right: 30px;
 }
 
-.sprava {padding-top: 60px;
-		float: right;
-		width: 70%;
-		padding-right: 10%;
+.sprava {
+		min-width: 500px;
+		margin-left: 220px;
 
 }
 
 .mainpage {
-	width: 700px;
-	margin:auto;
+	width: 80%;
+	min-width: 500px;
 	padding-top: 50px;
+	margin-right: 10%;
+	margin-left: 10%; 
 }
 .centr {
 	text-align: center;
